<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.opilane.kaladujuvad.ButtonsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:onClick="changeState"
            android:textOff="@string/off"
            android:textOn="@string/on" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="top"
                android:id="@+id/textView1"
                android:textOn= "@string/on"
                android:textOff="@string/off"
                android:visibility="invisible" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textOn="@string/switchOn"
                android:textOff="@string/switchOff"
                android:id="@+id/switchButton"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:visibility="invisible"
            android:id="@+id/textView2"
        />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:id="@+id/image"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/lama"
            android:onClick="changePicture"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:text="@string/texty"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:layout_gravity="center_horizontal"
            android:text="@string/midagi"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>
